completed with facelift

--- a/dartu/app/views/dart_cases/edit.erb
+++ b/dartu/app/views/dart_cases/edit.erb
@@ -1,15 +1,18 @@
-<h2> This is your edit page for cases </h2>
+<h2>Edit Your Dart Case <%= @dart_case.name %></h2>
 
-<h1>Edit Your Dart Case <%= @dart_case.name %></h1>
-
+<table>
 <form action="/dart_cases/<%= @dart_case.id %>" method="POST">
   <input type="hidden" name="_method" value="PUT" />
   <% @dart_case.errors.full_messages.each do |msg| %>
     <h3><%= msg %></h3>
   <% end %>
-  <label> Case Name </label>
+  <label> Case Name: </label>
   <input type="text" name="name" value="<%= @dart_case.name %>"> <br />
-
-  <input type="submit" value="Update">
+<br />
+  <input style="width:75px;margin:0px;" type="submit" value="Update">
 </form>
-  <a href="/dart_cases">Back to all your cases</a>
+<form action="/dart_cases/<%= @dart_case.id %>" method="GET">
+  <input style="width:75px;margin-left:50px;" type="submit" value="Cancel">
+</form>
+</table>
+  <p style="text-align:center;"><a href="/dart_cases">Back to Your Cases</a></p>
