--- a/dartu/app/views/dart_cases/index.erb
+++ b/dartu/app/views/dart_cases/index.erb
@@ -1,15 +1,22 @@
-<h2> This is your index page for cases </h2>
 <h2> These are all of your dart cases: </h2>
 <% @dart_cases.each do |dart_case| %>
 <h3>Case Name: <%= dart_case.name %></h3>
 <br />
-  <a style="font-size:11px;" href="/dart_cases/<%= dart_case.id %>"> View <%= dart_case.name %> Contents</a><br />
-  <a style="font-size:11px;" href="/dart_cases/<%= dart_case.id %>/edit">Edit This Dart Case Name</a>
+<table>
+  <form action="/dart_cases/<%= dart_case.id %>" method="GET">
+      <input style="width:135px" type="submit" value="View Case Contents">
+  </form>
+  <form action="/dart_cases/<%= dart_case.id %>/edit" method="GET">
+      <input style="width:135px;margin-left:25px;" style="width:135px" type="submit" value="Edit Case Name">
+  </form>
   <form action="/dart_cases/<%= dart_case.id %>" method="POST">
     <input type="hidden" name="_method" value="DELETE" />
-    <input type="submit" value="Delete Case">
+    <input style="width:135px;margin-left:25px;" type="submit" value="Delete Case">
   </form>
+  </table>
   <br />
   <br />
 <% end %>
-<a href="/dart_cases/new">New Dart Case</a>
+<p style="text-align:center;">
+<a  href="/dart_cases/new">New Dart Case</a>
+</p>
