--- a/dartu/app/views/users/login.erb
+++ b/dartu/app/views/users/login.erb
@@ -1,15 +1,19 @@
-<h3 style="color:orange;"> Put an error if login fails and username or password didn't match database and redirect to login</h3>
 
-<h2> This is your login page </h2>
 
-<% if @error_message %><p><%= @error_message %></p><% end %>
-<h1>Login to Dartu!</h1>
+<h2>Login to Dartu!</h2>
+
+<p style="color:red;"><%= @error_message %></p>
+
+
 <form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username:">
+<label> Username: </label>
+  <input style="position:absolute;left:375px;" type="text" name="username" placeholder="Username:">
   <br>
   <br>
-  <input type="password" name="password" placeholder="Password:">
+  <label> Password: </label>
+  <input style="position:absolute;left:375px;" type="password" name="password" placeholder="Password:">
 <br>
 <br>
-  <input type="submit" value="Login">
+  <input style="position:absolute;left:375px;width:75px;" type="submit" value="Login">
+  <br />
 </form>
