--- a/dartu/app/views/dart_sets/show.erb
+++ b/dartu/app/views/dart_sets/show.erb
@@ -32,6 +32,8 @@
   <br />
   <p style="text-align:center;">
   <a href="/dart_cases/<%= @dart_set.dart_case_id %>">Back to your case</a>
+  <br />
+  <a href="/dart_cases"> Back to all your Dart Cases</a>
   </p>
   <br />
   <br />
